<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/ph">
        <ListPreference
            app:defaultValue="9.8"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="gravity"
            app:title="@string/gravity"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/hp">

        <EditTextPreference
            app:title="Learning Rate"
            app:key="lr"
            app:defaultValue="0.02" />

        <EditTextPreference
            app:title="Directions"
            app:key="directions"
            app:defaultValue="8" />

        <EditTextPreference
            app:title="Best Directions"
            app:key="bestdirections"
            app:defaultValue="4" />

        <EditTextPreference
            app:title="Number of steps"
            app:key="steps"
            app:defaultValue="1000" />

        <EditTextPreference
            app:title="Noise"
            app:key="noise"
            app:defaultValue="0.03" />

    </PreferenceCategory>

</PreferenceScreen>